Changes Path Of Main Page inside PostLayout

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 <a href="#">Pages</a>
                 <a href="#">Shop</a>
                 <a href="#">Blog</a>
-                <a href="#">Post Layout</a>
-                <a href="#">Contact Us</a>
+                <a href="./src/PostLayout.html">Post Layout</a>
+                <a href="./src/contact.html">Contact Us</a>
             </nav>
 
             <!-- Mobile Secondary Links/Actions -->
