--- a/src/PostLayout.html
+++ b/src/PostLayout.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-    <a href="/index.html" class="btn btn-dark back-home-button shadow-sm" aria-label="Back to Home Page">
+    <a href="../index.html" class="btn btn-dark back-home-button shadow-sm" aria-label="Back to Home Page">
         <i class="bi bi-house-door-fill"></i>
     </a>
 
